--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "vuepress-plugin-zooming": "^1.1.7",
     "vuepress-theme-vdoing": "^1.12.8",
     "yamljs": "^0.3.0"
+  },
+  "dependencies": {
+    "valine": "^1.5.1"
   }
 }
