--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           user_email=`git log -1 --pretty=format:'%ae'`
           deploy_branch=gh-pages
           yarn
-          yarn build
+          set NODE_OPTIONS=--openssl-legacy-provider && yarn build
           cd docs/.vuepress/dist
           git config --global init.defaultBranch $deploy_branch
           git init
